--- a/OnionProject.MVC/Areas/Admin/Views/Author/Create.cshtml
+++ b/OnionProject.MVC/Areas/Admin/Views/Author/Create.cshtml
@@ -23,13 +23,11 @@
                 <span asp-validation-for="LastName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="UploadPath" class="control-label"></label>
-                <input type="file" asp-for="UploadPath" class="form-control" />
-                <span asp-validation-for="UploadPath" class="text-danger"></span>
+                <label asp-for="Image" class="control-label"></label> 
+                <input type="file" asp-for="Image" class="form-control" /> 
+                <span asp-validation-for="Image" class="text-danger"></span> 
             </div>
-            
-            
-            
+
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
@@ -42,5 +40,7 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
