--- a/OnionProject.MVC/Areas/Admin/Views/Author/Index.cshtml
+++ b/OnionProject.MVC/Areas/Admin/Views/Author/Index.cshtml
@@ -1,65 +1,60 @@
 ﻿@model IEnumerable<OnionProject.Application.Models.VMs.AuthorVm>
 
-
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Yazarlar";
 }
 
-<h1>Index</h1>
+<div class="container mt-5">
+    <h1 class="text-center mb-4">Yazarlar</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.FirstName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.LastName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ImagePath)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CreatedDate)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Status)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
+    <div class="mb-3 text-center">
+        <a asp-action="Create" class="btn btn-primary">Yeni Yazar Ekle</a>
+    </div>
+
+    <table class="table table-striped table-hover">
+        <thead class="thead-dark">
             <tr>
-                <td class="rounded">
-                    <img class="rounded-circle" width="15%" src="@item.ImagePath" />
-                    @* @Html.DisplayFor(modelItem => item.ImagePath) *@
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.FirstName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.LastName)
-                </td>
-
-                <td>
-                    @Html.DisplayFor(modelItem => item.CreatedDate)
-                </td>
-                
-
-                <td>
-                    @Html.DisplayFor(modelItem => item.Status)
-                </td>
-                <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-                </td>
+                <th scope="col">Kullanıcı Avatar</th>
+                <th scope="col">@Html.DisplayNameFor(model => model.FirstName)</th>
+                <th scope="col">@Html.DisplayNameFor(model => model.LastName)</th>
+                <th scope="col">@Html.DisplayNameFor(model => model.CreatedDate)</th>
+                <th scope="col">@Html.DisplayNameFor(model => model.Status)</th>
+                <th scope="col">İşlemler</th>
             </tr>
-        }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td class="rounded">
+
+                        <img class="rounded-circle" width="15%" src=@item.ImagePath />
+
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.FirstName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.LastName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.CreatedDate)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Status)
+                    </td>
+                    <td>
+                        <a asp-action="Update" asp-route-id="@item.Id" class="btn btn-warning btn-sm">Güncelle</a> |
+                        <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-info btn-sm">Detaylar</a> |
+                        <form asp-action="Delete" asp-route-id="@item.Id" method="post" style="display:inline;" onsubmit="return confirm('Silmek istediğinize emin misiniz?');">
+                            <button type="submit" class="btn btn-danger btn-sm">Sil</button>
+                        </form>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
+
+<!-- Bootstrap CSS -->
+<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet" />
