--- a/OnionProject.MVC/Views/Home/Index.cshtml
+++ b/OnionProject.MVC/Views/Home/Index.cshtml
@@ -1,8 +1,9 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    Layout = "_Layout";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1>Blog sayfamıza hoş geldiniz!</h1>
+    <a href="@Url.Action("Login", "Home")" class="btn btn-primary">Giriş Yap</a>
+    <p>Kayıt olmadınız mı? <a href="@Url.Action("Register", "Home")">Kayıt olun</a></p>
 </div>
