--- a/OnionProject.MVC/Areas/Admin/Views/Author/Details.cshtml
+++ b/OnionProject.MVC/Areas/Admin/Views/Author/Details.cshtml
@@ -69,6 +69,6 @@
     </div>
     
     <div class="mt-3">
-        <a href="@Url.Action("Index", "Author", new { area = "Admin" })" class="btn btn-primary">Back to List</a>
+        <a href="https://localhost:7225/Admin/Author/Index" class="btn btn-primary">Back to List</a>
     </div>
 </div>
