--- a/OnionProject.MVC/Areas/Admin/Views/Author/Update.cshtml
+++ b/OnionProject.MVC/Areas/Admin/Views/Author/Update.cshtml
@@ -2,7 +2,7 @@
 
 <h2>Yazar Güncelleme</h2>
 
-<form asp-action="Update" method="post" enctype="multipart/form-data">
+<form action="https://localhost:7225/Admin/Author/Update" method="post" enctype="multipart/form-data">
     <input type="hidden" asp-for="Id" />
 
     <div>
