--- a/OnionProject.MVC/Areas/Admin/Views/AdminGenre/Create.cshtml
+++ b/OnionProject.MVC/Areas/Admin/Views/AdminGenre/Create.cshtml
@@ -1,14 +1,16 @@
-﻿@model OnionProject.Application.Models.DTOs.CreateGenreDTO
+﻿
+@model OnionProject.Application.Models.DTOs.CreateGenreDTO
 
 <div class="container">
     <h2>Yeni Tür Ekle</h2>
-    <form asp-action="Create" method="post">
+    <form action="https://localhost:7225/Admin/AdminGenre/Create" method="post">
         <div class="form-group">
             <label asp-for="Name"></label>
             <input asp-for="Name" class="form-control" />
             <span asp-validation-for="Name" class="text-danger"></span>
         </div>
         <button type="submit" class="btn btn-primary">Kaydet</button>
-        <a href="@Url.Action("Index")" class="btn btn-secondary">Geri</a>
+        <a href="https://localhost:7225/Admin/AdminGenre/Index" class="btn btn-secondary">Geri</a>
     </form>
 </div>
+
