--- a/OnionProject.MVC/Areas/Admin/Views/AdminGenre/Edit.cshtml
+++ b/OnionProject.MVC/Areas/Admin/Views/AdminGenre/Edit.cshtml
@@ -2,7 +2,7 @@
 
 <div class="container">
     <h2>Türü Düzenle</h2>
-    <form asp-action="Edit" method="post">
+    <form action="https://localhost:7225/Admin/AdminGenre/Edit" method="post">
         <input type="hidden" asp-for="Id" />
         <div class="form-group">
             <label asp-for="Name"></label>
