Authorization işlemleri tamamlandı. Önemli bir bug olan ImagePath'in doğru url ile taşınması sağlandı. Böylelikle projedeki resimlerin görünmeme sorunu ortadan kalktı.

--- a/OnionProject.MVC/Areas/Admin/Views/AdminMain/Index.cshtml
+++ b/OnionProject.MVC/Areas/Admin/Views/AdminMain/Index.cshtml
@@ -14,7 +14,7 @@
                     <h4>Postları Yönet</h4>
                 </div>
                 <div class="card-body text-center">
-                    <p>Post ekleme, güncelleme veya silme işlemleri için buraya tıklayın.</p>
+                    <p>Post ekleme, güncelleme, silme ve kullanıcı yorumlarını yönetme işlemleri için buraya tıklayın.</p>
                     <a href="https://localhost:7225/Admin/AdminPost/Index" class="btn btn-primary">Postları Yönet</a>
 
                 </div>
