--- a/OnionProject.MVC/Areas/User/Views/UserPost/Index.cshtml
+++ b/OnionProject.MVC/Areas/User/Views/UserPost/Index.cshtml
@@ -5,7 +5,7 @@
 
 <div class="container mt-5">
     <h2 class="text-center">Tüm Postlar</h2>
-    
+
     @if (ViewBag.Username != null)
     {
         <div class="text-right">
@@ -18,7 +18,7 @@
         {
             <div class="col-md-4 mb-4">
                 <div class="card">
-                    <img src="@Url.Content("~/images/" + post.ImagePath)" class="card-img-top" alt="Post Image">
+                    <img src="@post.ImagePath" class="card-img-top" alt="Post Image">
                     <div class="card-body">
                         <h5 class="card-title">@post.Title</h5>
                         @* <p class="card-text">@post.Content.Substring(0, 100) ...</p> *@
