--- a/OnionProject.MVC/Views/Shared/_Layout.cshtml
+++ b/OnionProject.MVC/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/">Blog</a>
+                <a class="navbar-brand" href="/">Raven's Blog</a>
                 <div class="collapse navbar-collapse">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
