Bug Fixes, yönlendirmelerde düzeltme ve logout işlemleri eklendi.

--- a/OnionProject.MVC/Areas/Admin/Views/AdminGenre/Edit.cshtml
+++ b/OnionProject.MVC/Areas/Admin/Views/AdminGenre/Edit.cshtml
@@ -10,6 +10,7 @@
             <span asp-validation-for="Name" class="text-danger"></span>
         </div>
         <button type="submit" class="btn btn-primary">Güncelle</button>
-        <a href="@Url.Action("Index")" class="btn btn-secondary">Geri</a>
+        
+        <a href="https://localhost:7225/Admin/AdminGenre/Index" class="btn btn-dark">Geri Dön</a>
     </form>
 </div>
