--- a/OnionProject.MVC/Areas/Admin/Views/AdminGenre/Index.cshtml
+++ b/OnionProject.MVC/Areas/Admin/Views/AdminGenre/Index.cshtml
@@ -27,6 +27,8 @@
             }
         </tbody>
     </table>
-    @* <a href="@Url.Action("Create", "AdminGenre", new { area = "Admin" })" class="btn btn-success">Yeni Tür Ekle</a> *@
+    
     <a href="https://localhost:7225/Admin/AdminGenre/Create" class="btn btn-success">Yeni Tür Ekle</a>
+    <br />
+    <a href="https://localhost:7225/Admin/AdminMain/Index" class="btn btn-dark">Geri Dön</a>
 </div>
