--- a/OnionProject.MVC/Areas/Admin/Views/AdminPost/Create.cshtml
+++ b/OnionProject.MVC/Areas/Admin/Views/AdminPost/Create.cshtml
@@ -52,3 +52,4 @@
         <button type="submit" class="btn btn-primary btn-block">Gönderi Oluştur</button>
     </form>
 </div>
+<button class="btn btn-secondary" onclick="history.back()">Geri Dön</button>
