--- a/OnionProject.MVC/Areas/Admin/Views/AdminPost/Update.cshtml
+++ b/OnionProject.MVC/Areas/Admin/Views/AdminPost/Update.cshtml
@@ -63,7 +63,9 @@
                 }
             </select>
         </div>
-
+        <br />
         <button type="submit" class="btn btn-primary btn-block">Gönderiyi Güncelle</button>
+        <br />
+        <button class="btn btn-secondary" onclick="history.back()">Geri Dön</button>
     </form>
 </div>
