--- a/OnionProject.MVC/Areas/Admin/Views/Author/Index.cshtml
+++ b/OnionProject.MVC/Areas/Admin/Views/Author/Index.cshtml
@@ -9,6 +9,8 @@
 
     <div class="mb-3 text-center">
         <a href="https://localhost:7225/Admin/Author/Create" class="btn btn-primary">Yeni Yazar Ekle</a>
+        <a href="https://localhost:7225/Admin/AdminMain/Index" class="btn btn-dark">Geri Dön</a>
+        
     </div>
 
     <table class="table table-striped table-hover">
